fix(FEV-1198): scroll bar and text truncate fix (#24)

--- a/src/components/quiz-question/multi-choice/multi-choice.scss
+++ b/src/components/quiz-question/multi-choice/multi-choice.scss
@@ -69,7 +69,7 @@
         .questionContent {
           flex-grow: 1;
           padding: 5px 16px 5px 8px;
-          min-width: fit-content;
+          min-width: 0;
         }
       }
     }
