--- a/src/components/quiz-submit/quiz-submit.scss
+++ b/src/components/quiz-submit/quiz-submit.scss
@@ -16,7 +16,7 @@
   .title {
     flex-shrink: 0;
     font-size: 32px;
-    line-height: 32px;
+    line-height: 36px;
     font-weight: 700;
   }
   .description {
